feat: dashboard with fake data

--- a/app/ui/global.scss
+++ b/app/ui/global.scss
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  --background: #ffffff;
+  --background: #fcf9e5;
   --foreground: #171717;
 }
 
